fix for issue #122 clone/add buttons overlapping

--- a/jsapp/scss/stylesheets/partials/form_builder/_card.scss
+++ b/jsapp/scss/stylesheets/partials/form_builder/_card.scss
@@ -255,8 +255,8 @@ $cardIndicatorIconWidth: 21px;
     &.card__buttons__button--gray-green {
       bottom: 0px;
     }
-    &.card__buttons__button--card__buttons__button--copy {
-        bottom: 25%
+    &.card__buttons__button--copy {
+        bottom: 26%;
     }
     &.card__buttons__button--activated {
         // trying to transition this into %activated-card-button
